# van-cooldown

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: docs-ci.yml
docs/: .aspell.en.pws  .dockerignore  .markdownlint.json  .pyspelling.yml  .spelling-wordlist.txt  .vale.ini  Dockerfile  README.md  SETUP.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  setup-guide.md  spell_check.py
docs/.vale/styles/VanCooldown/: GenericHeadings.yml  Terminology.yml  Vocabulary.yml  accept.txt  vocab.txt
docs/overrides/partials/: source.html
docs/src/: index.md  version.md
docs/src/assets/javascripts/: mathjax.js
docs/src/assets/stylesheets/: diagrams.css  extra.css
docs/src/legal/: privacy-notice.md
documentation/: .mdformat.toml  .vale.ini  mkdocs.yml  pyproject.toml
documentation/.vale/: styles.yml
documentation/.vale/config/vocabularies/van-cooldown/: accept.txt  reject.txt
documentation/docs/: code_of_conduct.md  codeowners.md  license.md  privacy.md
documentation/docs/js/: mermaid-init.js
hardware/: LiPo.kicad_sch  charger.kicad_sch  fp-lib-table  sym-lib-table  van-cooldown.kicad_pcb  van-cooldown.kicad_pro  van-cooldown.kicad_sch  van-cooldown.kicad_sym
hardware/van-cooldown.pretty/: C_ECASD31D476M040KA0.kicad_mod  D_TVS2200DRVR.kicad_mod  IC_BQ25798RQMR.kicad_mod  IC_TPD2S300YFFR.kicad_mod  IC_TPS25751DREFR.kicad_mod  IND_SPM6530_TDK.kicad_mod  J_DX07S024JJ2R1300.kicad_mod  Q_CSD17575Q3.kicad_mod  Q_CSD17581Q3A.kicad_mod  TP_5000.kicad_mod  TP_5001.kicad_mod  TP_5002.kicad_mod  TP_5003.kicad_mod
tools/scripts/: manage_envs.py  spell_check.py
