[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "van-cooldown-docs"
version = "1.0.0"
description = "Van Cooldown System Documentation"
authors = [{ name = "Van Cooldown Team", email = "fabien-meyer@outlook.com" }]
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.15",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocstrings[python]>=0.29.1",
    "pymdown-extensions>=10.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = ["linkchecker>=10.2.0", "pyspelling>=2.8.2", "proselint>=0.13.0"]

[tool.uv]
dev-dependencies = [
    "linkchecker>=10.2.0",
    "pyspelling>=2.8.2",
    "proselint>=0.13.0",
]
