[project]
name = "van-cooldown-docs"
version = "0.1.0"
description = "Documentation for the van-cooldown project."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    # "mike",
]

[tool.uv]
dev-dependencies = [
    "vale",
    "mdformat",
    "mdformat-gfm",
    "mdformat-frontmatter",
    "mdformat-tables",
]

[tool.mdformat]
wrap = 80
end_of_line = "lf"
exclude = [
    "node_modules/**",
    ".venv/**",
    "site/**",
    ".vale/**"
]
extensions = [
    "gfm",        # GitHub Flavored Markdown
    "frontmatter", # YAML front matter
    "tables",     # Table formatting
]
