[project]
name = "van-cooldown-docs"
version = "0.1.0"
description = "Documentation for the van-cooldown project."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-plotly-plugin>=0.1.3",
    "pymdown-extensions>=10.16.1",
]

[tool.uv]
dev-dependencies = [
    "vale",
    "mdformat",
    "mdformat-gfm",
    "mdformat-frontmatter",
    "mdformat-tables",
]

[tool.mdformat]
wrap = 80
end_of_line = "lf"
exclude = [
    "node_modules/**",
    ".venv/**",
    "site/**",
    ".vale/**"
]
extensions = [
    "gfm",        # GitHub Flavored Markdown
    "frontmatter", # YAML front matter
    "tables",     # Table formatting
]
